[package]
name = "pingora-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
pingora = "0.8"
pingora-core = "0.8"
pingora-proxy = "0.8"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
mime_guess = "2.0"

[profile.release]
opt-level = 3
lto = true
